--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mini-css-extract-plugin": "^0.4.4",
     "terser-webpack-plugin": "^1.1.0",
     "webpack": "^4.25.1",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.4.1"
   }
 }
