--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "prettier": "^1.14.3",
     "react": "^16.7.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0",
+    "react-hoox": "0.0.4",
     "react-router": "^4.3.1",
     "todomvc-app-css": "^2.1.2",
     "todomvc-common": "^1.0.5"
